# crew-ai

./: README.md  pyproject.toml
output/: post.md
src/copilotkit_crewai_test/: api.py  main.py
