[project]
name = "copilotkit_crewai_test"
version = "0.1.0"
description = "copilotkit-crewai-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2"
]

[project.scripts]
kickoff = "copilotkit_crewai_test.main:kickoff"
run_crew = "copilotkit_crewai_test.main:kickoff"
plot = "copilotkit_crewai_test.main:plot"
run_with_trigger = "copilotkit_crewai_test.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
